# cog3pio

./: .clippy.toml  .gitignore  .release-plz.toml  Cargo.toml  README.md  myst.yml  pyproject.toml  zensical.toml
.github/workflows/: benchmarks.yml  ci.yml  lint.yml  release.yml
benches/: read_cog.rs
docs/: .readthedocs.yaml  api.md  changelog.md  conf.py  environment.yml  index.md  myst.yml  quickstart.md
python/cog3pio/: __init__.py  __init__.pyi  xarray_backend.py
python/tests/: test_cog3pio.py  test_io_geotiff.py  test_io_nvtiff.py  test_xarray_backend.py
src/: error.rs  lib.rs  traits.rs
src/io/: geotiff.rs  mod.rs  nvtiff.rs
src/python/: adapters.rs  cudacog.rs  mod.rs
