[package]
name = "cog3pio"
version = "0.0.1"
edition = "2024"
description = "Cloud-optimized GeoTIFF ... Parallel I/O"
readme = "README.md"
repository = "https://github.com/weiji14/cog3pio"
license = "MIT OR Apache-2.0"
rust-version = "1.85.0"
authors = ["Wei Ji <23487320+weiji14@users.noreply.github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cog3pio"
crate-type = ["cdylib", "rlib"]

[dependencies]
bytes = "1.5.0"
cudarc = { version = "0.18.2", features = [
    "cuda-version-from-build-system",
    "fallback-latest",
], optional = true }
dlpark = { git = "https://github.com/SunDoge/dlpark.git", rev = "93def2733de9437f50d7f704ddddcf0f67016d88", version = "0.6.0", features = [
    "half",
    "ndarray",
] }
geo = "0.29.0"
ndarray = "0.17.1"
numpy = { version = "0.27.1", optional = true }
nvtiff-sys = { version = "0.2.0", optional = true }
object_store = { version = "0.12.3", features = ["http"] }
pyo3 = { version = "0.27.1", features = [
    "abi3-py312",
    "extension-module",
], optional = true }
tiff = { version = "0.10.0", features = ["zstd"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"], optional = true }
url = { version = "2.5.7", optional = true }

[dev-dependencies]
criterion = { package = "codspeed-criterion-compat", version = "4.1.0" }
gdal = { git = "https://github.com/georust/gdal.git", version = "0.18.0", features = [
    "array",
], rev = "8b9e04938298055f2a22dce5c21c1a6e73678ecb" }
# comment out gdal-src and gdal-sys if libgdal-dev is installed locally
gdal-src = { git = "https://github.com/georust/gdal.git", version = "0.3.0", features = [
    "driver_gtiff",
    "nobuild",
], rev = "8b9e04938298055f2a22dce5c21c1a6e73678ecb" }
gdal-sys = { git = "https://github.com/georust/gdal.git", version = "0.11.0", features = [
    "bundled",
], rev = "8b9e04938298055f2a22dce5c21c1a6e73678ecb" }
half = { version = "2.6.0", features = ["num-traits"] }
rstest = "0.26.1"
tempfile = "3.10.1"
tokio = { version = "*", features = ["rt-multi-thread"] }
url = "2.5.7"

[features]
cuda = ["cudarc", "dlpark/cuda", "nvtiff-sys"]
pyo3 = ["dlpark/pyo3", "dep:numpy", "dep:pyo3", "dep:tokio", "dep:url"]

[lints.clippy]
pedantic = "warn"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.test]
opt-level = 2

[[bench]]
name = "read_cog"
harness = false
