[package]
name = "cog3pio"
version = "0.1.0-beta.2"
edition = "2024"
rust-version = "1.91.0"
description = "Cloud-optimized GeoTIFF ... Parallel I/O"
readme = "README.md"
repository = "https://github.com/weiji14/cog3pio"
license = "MIT OR Apache-2.0"
categories = ["science::geo"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]
name = "cog3pio"

[[bin]]
doc = false
name = "stub_gen"
required-features = ["pyo3"]

[[bench]]
harness = false
name = "read_cog"

[dependencies]
bytes = "1.5.0"
cudarc = { version = "0.18.2", features = [
    "cuda-version-from-build-system",
    "fallback-latest",
], optional = true }
dlpark = { git = "https://github.com/SunDoge/dlpark.git", rev = "aff9c5d4b7726b4f66684e6fe0ac98ec58e263bd", version = "0.6.0", features = [
    "half",
    "ndarray",
] }
exn = "0.3.0"
geo = "0.29.0"
ndarray = "0.17.1"
numpy = { version = "0.28.0", optional = true }
nvtiff-sys = { version = "0.2.1", optional = true }
object_store = { version = "0.12.3", features = ["http"] }
pyo3 = { version = "0.28.3", features = ["abi3-py313", "extension-module"], optional = true }
pyo3-stub-gen = { version = "0.22.0", optional = true }
pyo3-stub-gen-derive = { version = "0.22.0", optional = true }
tiff = { version = "0.11.2", features = ["zstd"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"], optional = true }
url = { version = "2.5.7", optional = true }

[dev-dependencies]
criterion = { package = "codspeed-criterion-compat", version = "4.1.0" }
gdal = { version = "0.19.0", features = ["array"] }
# comment out gdal-src and gdal-sys if libgdal-dev is installed locally
gdal-src = { version = "0.3.0", features = ["driver_gtiff", "nobuild"] }
gdal-sys = { version = "0.12.0", features = ["bundled"] }
half = { version = "2.7.1", features = ["num-traits"] }
rstest = "0.26.1"
tempfile = "3.10.1"
tokio = { version = "*", features = ["rt-multi-thread"] }
url = "2.5.7"

[features]
cuda = ["cudarc", "dlpark/cuda", "nvtiff-sys"]
pyo3 = [
    "dep:numpy",
    "dep:pyo3",
    "dep:pyo3-stub-gen",
    "dep:pyo3-stub-gen-derive",
    "dep:tokio",
    "dep:url",
    "dlpark/pyo3",
]

[lints.clippy]
pedantic = "warn"

[profile.test]
opt-level = 2
