[project]
name = "cog3pio"
requires-python = ">=3.13"
license = "MIT OR Apache-2.0"
license-files = ["LICENSE-APACHE", "LICENSE-MIT"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: Free Threading",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "numpy>=2.0",
    "xarray>=2024.10.0",
]
dynamic = ["version"]

[project.entry-points."xarray.backends"]
cog3pio = "cog3pio.xarray_backend:Cog3pioBackendEntrypoint"

[project.optional-dependencies]
benchmark = [
    "pytest-codspeed",
    "rioxarray",
]
cuda = [
    "cupy-cuda13x",
]
docs = [
    "mkdocstrings-python",
    "zensical",
]
tests = [
    "mypy",
    "pytest",
]

[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3"]
python-source = "python"

[tool.pytest]
addopts = [
    "--color=yes",
    "-r=fEP",
]
