[project]
name = "cog3pio"
description = "Cloud-optimized GeoTIFF ... Parallel I/O"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT OR Apache-2.0"
license-files = ["LICENSE-APACHE", "LICENSE-MIT"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: Free Threading",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: File Formats",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Software Development :: Libraries"
]
dependencies = [
    "numpy>=2.0",
]
dynamic = ["version"]

[project.urls]
"Changelog" = "https://cog3pio.readthedocs.io/en/latest/changelog"
"Documentation" = "https://cog3pio.readthedocs.io"
"Source Code" = "https://github.com/weiji14/cog3pio"

[project.optional-dependencies]
cuda = [
    "cupy-cuda13x",
]

[dependency-groups]
benchmark = [
    "pytest-codspeed",
]
docs = [
    "mkdocstrings-python",
    "zensical",
]
tests = [
    "mypy",
    "pytest",
]

[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3"]
python-source = "python"

[tool.pytest]
addopts = [
    "--color=yes",
    "-r=fEP",
]
